--- a/pendidikan.html
+++ b/pendidikan.html
@@ -230,6 +230,9 @@
                         <h5>
                            SMKN 5 Kab. Tangerang
                         </h5>
+                        <h6>
+                           Rekayasa Perangkat Lunak
+                        </h6>
                      </div>
                   </div>
                </div>
