--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                         </h2>
                      </div>
                      <p style="margin-top: 20px;margin-bottom: 30px;">
-                        Saya Ekse Sahra Ramadhani. Saya lahir di Jakarta, 16 Oktober 2006. Lulusan SMKN 5 Kab. Tangerang. Alamat rumah saya, Tangerang, Taman Raya Rajeg, Blok L7 No 16, nomor WhatsApp saya, 082114522359, instagram saya, @kshr.yuu_, alamat email saya, eksesahra@gmail.com
+                        Saya Ekse Sahra Ramadhani. Saya lahir di Jakarta, 16 Oktober 2006. Lulusan SMKN 5 Kab. Tangerang jurusan Rekayasa Perangkat Lunak. Alamat rumah saya, Tangerang, Taman Raya Rajeg, Blok L7 No 16, nomor WhatsApp saya, 082114522359, instagram saya, @kshr.yuu_, alamat email saya, eksesahra@gmail.com
                      </p>
                   </div>
                </div>
